# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import analysesRouter from "./analyses";
+import analyzeRouter from "./analyze";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(analysesRouter);
+router.use(analyzeRouter);
 
 export default router;
